--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="contact">
         <div class="container">
             <div class="image-container">
-                <img src="https://your-facebook-image-link.jpg" alt="Profile Image">
+                <img src=https://www.facebook.com/photo/?fbid=6885826631507967&set=a.206437236113640" alt="Profile Image">
             </div>
             <div class="form-container">
                 <h2>Contact Me</h2>
